syntax = "proto3";
package oracle.v1;

import "gogoproto/gogo.proto";
import "oracle/v1/attestation.proto";
import "oracle/v1/types.proto";
import "oracle/v1/prices.proto";

option go_package = "github.com/MinterTeam/mhub2/module/x/oracle/types";

message Params {
  option (gogoproto.stringer)  = false;

  uint64 signed_claims_window             = 1;
  bytes  slash_fraction_claim             = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  bytes  slash_fraction_conflicting_claim = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// GenesisState struct
message GenesisState {
  Params  params  = 1;
  Prices  prices  = 2;
  Holders holders = 3;
}
